--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -43,6 +43,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  font-family: Helvetica, sans-serif;
 }
 
 .title,
@@ -71,6 +72,7 @@
   justify-content: center;
   flex-wrap: wrap;
   max-width: 800px;
+  margin-top: 60px;
 }
 
 .card {
@@ -79,17 +81,19 @@
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid #000;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: all 0.15s ease;
   max-width: 300px;
+  font-family: Helvetica, sans-serif;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+  color: #fff;
+  border-color: #000;
+  background-color: #000;
 }
 
 .card h2 {
